Closed Bug 334449 Opened 19 years ago Closed 19 years ago

oom Crash in crmf_template_copy_secalg

Categories

(NSS :: Libraries, defect, P2)

3.11
All
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.11.1

People

(Reporter: timeless, Assigned: alvolkov.bgs)

References

()

Details

(Keywords: coverity, crash, Whiteboard: CID 210)

Attachments

(1 file, 1 obsolete file)

found by coverity
Attached patch error fast and early (obsolete) — Splinter Review
Attachment #218793 - Flags: review?(nelson)
Comment on attachment 218793 [details] [diff] [review] error fast and early Two issues with this patch: >- if (poolp != NULL) { >- mark = PORT_ArenaMark(poolp); >+ if (poolp) { 1. Needs to be: if (!poolp) { 2. Needs to set error code PORT_SetError(SEC_ERROR_INVALID_ARGS); >+ return SECFailure; > } >+ >+ mark = PORT_ArenaMark(poolp); > *dest = mySecAlg = PORT_ArenaZNew(poolp, SECAlgorithmID); > if (mySecAlg == NULL) { > goto loser;
Attachment #218793 - Flags: review?(nelson) → review-
Target Milestone: --- → 3.11.1
Priority: -- → P2
Hardware: PC → All
Attached patch corrected patchSplinter Review
Attachment #218793 - Attachment is obsolete: true
Attachment #219157 - Flags: review?(nelson)
Comment on attachment 219157 [details] [diff] [review] corrected patch r=nelson
Attachment #219157 - Flags: review?(nelson) → review+
tip: /cvsroot/mozilla/security/nss/lib/crmf/crmfreq.c,v <-- crmfreq.c new revision: 1.6; previous revision: 1.5 3.11 branch: /cvsroot/mozilla/security/nss/lib/crmf/crmfreq.c,v <-- crmfreq.c new revision: 1.4.28.2; previous revision: 1.4.28.1
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Assignee: nobody → alexei.volkov.bugs
CID 210
Whiteboard: CID 210
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: