Patch contributed by timeless@bemail.org [Bug 334449] oom Crash in crmf_template_copy_secalg. r=nelson